# taverntales

./: justfile  main.py  pyproject.toml  server.py  settings.py
db/: models.py
db/migrations/: 0001_initial.py
